# ColourspecXFM

./: .gitignore  .gitmodules  Dockerfile  README.md  apptainer.def  apptainer_build.sh  config.yaml  config_remove.yaml  core.py  core2.py  deadtime.ipynb  diag_test.py  diag_trial.py  docker_build.sh  fitting.ipynb  main.py  parallel_trial.ipynb  processed.py  readoutxfm_main.py  requirements.txt  setup.cfg  skeleton.py
conf/: xfmkit.conf
containers/: apptainer.def  apptainer_prod.def  build_apptainer.sh  run_apptainer.sh  wrap_xfmproc  wrap_xfmraw
data/: counts_per_ppm_mod.csv  linepos.csv
docs/: runtime_log.txt
notebooks/: classavg.npy  colour_cycle.ipynb  dbscan.ipynb  dbscan_trial.ipynb  deadtime.ipynb  deadtimes.ipynb  debug_post.ipynb  dtcalc.ipynb  explore.ipynb  geopixe_seg.ipynb  memoryorder.ipynb  raw_explore.ipynb  scratch.ipynb  som.ipynb
notebooks/multiprocess/: multiprocess.py  pipe_test.py  pool_origin.py  q_origin.py  queue_test.py  temp.txt
tests/: config_tests.yaml  disabled_test_clustering_integration.py  manual.ipynb  test_buffer_reads.py  test_dataseries.py  test_dt_integration.py  test_integration.py  test_parser.py  test_pixel_reads.py  test_stream_reads.py  xtest_buffer_reads.py
tests/PREVIOUS/: pytest.ini
tests/test_data/: ts2_01_sub_export.GeoPIXE  ts2_01_sub_export_data.npy
tests/test_pixel_reads/: px14387_1_data_chan.npy  (+1 more)
xfmkit/: argops.py  bufferops.py  byteops.py  clustering.py  colours.py  config.py  diagops.py  dtops.py  entry_processed.py  entry_raw.py  fitting.py  geopixeio.py  imgops.py  parser.py  preprocessing.py  processops.py  rgbspectrum.py  somfit.py  structures.py  tabular.py  utils.py  visualisations.py
xfmreadout/: argops.py  bufferops.py  byteops.py  byteops2.py  clustering.py  colour.py  colours.py  config.yaml  deadtime.ipynb  diagops.py  dtops.py  entry_processed.py  entry_raw.py  entrypoints.py  fitting.py  imgops.py  obj.py  obj2.py  parallel.py  parser.py  parser2.py  processed_ops.py  processed_plots.py  processops.py  protocol.yaml  read_processed.py  read_raw.py  rgbspectrum.py  structures.py  utils.py  visualisations.py  xfmreadout.py
(+102 files in other folders)
