[metadata]
name = xfmreadout
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy==1.23.5
    psutil==5.9.4
    PyYAML==6.0
    scikit-learn==1.2.2
    matplotlib==3.7.1
    umap-learn==0.5.3
    hdbscan==0.8.29
    scipy==1.10.1
    seaborn==0.12.2
    pybaselines==1.0.0
    Pillow==9.5.0
    periodictable==1.6.1
    colorcet==3.0.1
    setuptools==63.2.0
    pytest==7.3.1
    pytest-datafiles==3.0.0  
    pybind11==2.10.4  
    #parsercore @ ./xfmparser
    #parsercore @ file://localhost/./xfmparser/
    parsercore @ git+https://github.com/lachlanc61/xfmparser.git@623a9fe0f61383accac9d34ce9484c00692debbf
zip_safe = True
include_package_data = True

[options.extras_require]
dev = 
    black==22.1.0
    flake8==4.0.1

[options.entry_points]
console_scripts = 
    xfmreadout = xfmreadout.xfmreadout:main
    xfmprocessed = xfmreadout.xfmprocessed:main


[options.package_data]
example = data/example_datafile.GeoPIXE, *.yaml
* = README.md

















