[metadata]
name = xfmkit
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy==1.23.5
    psutil==5.9.4
    PyYAML==6.0
    scikit-learn==1.2.2
    matplotlib==3.7.1
    umap-learn==0.5.3
    hdbscan==0.8.29
    scipy==1.10.1
    seaborn==0.12.2
    pybaselines==1.0.0
    Pillow==9.5.0
    periodictable==1.6.1
    colorcet==3.0.1
    setuptools==63.2.0
    pytest==7.3.1
    pytest-datafiles==3.0.0  
    pybind11==2.10.4  
    tabulate==0.9.0
    pacmap==0.7.0
    annoy==1.17.3
    jupyterlab==4.0.2    
    parsercore @ git+https://github.com/lachlanc61/xfmparser.git@623a9fe0f61383accac9d34ce9484c00692debbf
zip_safe = True
include_package_data = True

[options.extras_require]
dev = 
    black==22.1.0
    flake8==4.0.1
    jupyterlab==4.0.2

[options.entry_points]
console_scripts = 
    xfmkit-raw = xfmkit.entry_raw:entry_raw
    xfmkit-proc = xfmkit.entry_processed:entry_processed


[options.package_data]
example = data/example_datafile.GeoPIXE, *.yaml
* = README.md

















